# architecture-pattern-study

./: README.md
ch-0_intro/: Cargo.toml  doc.md
ch-0_intro/src/: main.rs
ch-1_domain-model/: Cargo.toml
ch-1_domain-model/src/: main.rs
ch-2_repository_pattern/: Cargo.toml
ch-2_repository_pattern/src/: main.rs
